# buckets-for-zerodha

./: .gitignore  Guide to creating goals.md  README.md  auth.py  display.py  goals.py  main.py  portfolio.py  pyproject.toml  rebalance.py  to-buckets.md  utils.py
.github/workflows/: main.yml
